Fix the logo-shift on a local copy of the theme

--- a/docs/_assets/css/custom.css
+++ b/docs/_assets/css/custom.css
@@ -31,10 +31,6 @@
   --search-margin: 0.5rem 0;
 }
 
-body:not([data-platform^="Mac"]) .sidebar:hover > *:not(.sidebar-nav) {
-  margin-right: 0;
-}
-
 p.footer {
   text-align: right;
   margin: 2em 0 0 0;
